--- a/.github/workflows/git.yaml
+++ b/.github/workflows/git.yaml
@@ -20,4 +20,4 @@ jobs:
           distribution: 'adopt'
           cache: maven
       - name: Build with Maven
-        run: mvn -B package --file pom.xml
+        run: mvn -B package --file user-ms/pom.xml
