--- a/.github/workflows/git.yaml
+++ b/.github/workflows/git.yaml
@@ -7,10 +7,9 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
-
+  test-user-ms:
+    name: Test user-ms
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
       - name: Set up JDK 17
@@ -21,3 +20,17 @@ jobs:
           cache: maven
       - name: Build with Maven
         run: mvn -B package --file user-ms/pom.xml
+
+  test-car-ms:
+    name: Test car-ms
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'adopt'
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file car-ms/pom.xml
