rentCar module added

--- a/car-ms/src/main/resources/application.properties
+++ b/car-ms/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:postgresql://postgres:5432/car
+spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/car
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
