--- a/car-ms/src/main/resources/application.properties
+++ b/car-ms/src/main/resources/application.properties
@@ -5,3 +5,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.liquibase.change-log=classpath:db.changelog/db.changelog.xml
 spring.liquibase.default-schema=public
+
+server.port=8089
+grpc.server.port=8090
