--- a/user-ms/src/main/resources/application.properties
+++ b/user-ms/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 spring.liquibase.change-log=classpath:db.changelog/db.changelog.xml
 spring.liquibase.default-schema=public
+
+server.port=8087
+
+integration.internal.car.port=8090
+integration.internal.car.address=localhost
