strategy patern-leasing calculation

--- a/car-ms/src/main/resources/application.properties
+++ b/car-ms/src/main/resources/application.properties
@@ -8,3 +8,8 @@ spring.liquibase.default-schema=public
 
 server.port=8089
 grpc.server.port=8090
+
+car.leasing.coefficients.SEDAN=0.5
+car.leasing.coefficients.COMBI=0.2
+car.leasing.coefficients.SUV=0.6
+car.leasing.coefficients.CABRIOLET=0.1
