--- a/car-ms/src/main/resources/application.properties
+++ b/car-ms/src/main/resources/application.properties
@@ -1,15 +1,24 @@
+# App
+server.port=8089
+
+# DB
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/car
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Liquibase
 spring.liquibase.change-log=classpath:db.changelog/db.changelog.xml
 spring.liquibase.default-schema=public
 
-server.port=8089
+# Grpc
 grpc.server.port=8090
 
+# Leasing
 car.leasing.coefficients.SEDAN=0.5
 car.leasing.coefficients.COMBI=0.2
 car.leasing.coefficients.SUV=0.6
 car.leasing.coefficients.CABRIOLET=0.1
+
+# Cron
+cron.leasing.time=59 23 * * * *
