--- a/user-ms/src/main/resources/application.properties
+++ b/user-ms/src/main/resources/application.properties
@@ -1,12 +1,16 @@
+# App
+server.port=8087
+
+# DB
 spring.datasource.url=jdbc:postgresql://${DB_HOST}:5432/user
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
+# Liquibase
 spring.liquibase.change-log=classpath:db.changelog/db.changelog.xml
 spring.liquibase.default-schema=public
 
-server.port=8087
-
+# Car MS integration
 integration.internal.car.port=8090
 integration.internal.car.address=localhost
